Added social media links and edited text

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web developer who loves learning cool new coding tricks. I've traveled to many places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional fitness coach and bartender and am a life-long learner who's always interested in trying new things and expanding skills.</p>
+        <p>I’m an aspiring web developer who loves learning cool new coding tricks. I have worked in lots of different jobs, and I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’ve been a bartender and a professional fitness coach and am a life-long learner who's always interested in trying new things and expanding my skills.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -45,9 +45,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/viktooreuh" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/victoriafuselier/" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/victoriafuselier" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2023, Victoria Fuselier</p>
     </footer>
