--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <ul class="nav">
           <li class="name">Victoria</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="interests.html">Interests</a></li>
         </ul>
     </div>
 
