--- a/interests.html
+++ b/interests.html
@@ -5,10 +5,9 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
-</head>
-<body>
-    <header>
+  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <body>
+
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Victoria</li>
@@ -17,24 +16,33 @@
           <li><a href="interests.html">Interests</a></li>
         </ul>
     </div>
+
+    <header>
+      <img src="images/me.jpg" alt="Victoria wearing hat and camera" class="profile-image">
+      <h1 class="tag name">Hello, I’m Victoria.</h1>
+      <p class="tag location">My hometown is Gueydan, Louisiana.</p>
     </header>
-    <main>
-        <h2>Interests</h2>
-        <ul>
-            <li>Weightlifting</li>
-            <li>Yoga</li>
-            <li>Reading</li>
-            <li>Music</li>
-            <li>Movies & Television</li>
-            <li>Fashion</li>
-        </ul>
+
+    <main class="flex">
+        <div class="card">
+            <h2>Interests</h2>
+            <ul>
+                <li>Weightlifting</li>
+                <li>Yoga</li>
+                <li>Reading</li>
+                <li>Music</li>
+                <li>Movies & Television</li>
+                <li>Fashion</li>
+            </ul>
+        </div>
     </main>
     <footer>
-        <ul>
-            <li><a href="https://twitter.com/viktooreuh" class="social twitter" target="_blank">Twitter</a></li>
-            <li><a href="https://www.linkedin.com/in/victoriafuselier/" class="social linkedin" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/victoriafuselier" class="social github" target="_blank">Github</a></li>
-        </ul>
-        <p class="copyright">Copyright 2023, Victoria Fuselier</p>
+      <ul>
+        <li><a href="https://twitter.com/viktooreuh" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/victoriafuselier/" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/victoriafuselier" class="social github" target="_blank">Github</a></li>
+      </ul>
+      <p class="copyright">Copyright 2023, Victoria Fuselier</p>
     </footer>
-</body>
+  </body>
+  </html>
