Added contact page and changed some CSS formatting

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Victoria</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="interests.html">Interests</a></li>
@@ -19,37 +18,20 @@
     </div>
 
     <header>
-      <img src="images/me.jpg" alt="Victoria wearing hat and camera" class="profile-image">
+      <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
       <h1 class="tag name">Hello, I’m Victoria.</h1>
-      <p class="tag location">My hometown is Gueydan, Louisiana.</p>
+      <p class="tag location">I'm from Gueydan, Louisiana. I currently live in Baton Rouge.</p>
     </header>
 
     <main class="flex">
-        <div class="card">
-            <h2>Skills</h2>
-                <ul>
-                    <li>Typing</li>
-                    <li>Organization</li>
-                    <li>Time Management</li>
-                    <li>Professionalism</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>Bootstrap</li>
-                    <li>Github</li>
-                </ul>
-        </div> 
-        <div class="card">
-            <h2>Coding Resources I Learned From</h2>
-                <ul>
-                    <li>Team Treehouse</li>
-                    <li>Free Code Camp</li>
-                    <li>W3Schools</li>
-                    <li>MDN Web Docs</li>
-                    <li>Codepip</li>
-                    <li>Youtube</li>
-                </ul>
-        </div> 
+      <h2>Want to get in touch?</h2>
+      <ul>
+        <li>(337)660-5918</li>
+        <li>vic.fuselier@gmail.com</li>
+        <li>LinkedIn</li>
+        <li>Github</li>
+        <li>Twitter</li>
+      </ul>
     </main>
     <footer>
       <ul>
