--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Victoria</li>
+          <li class="name">Welcome to my page!</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="interests.html">Interests</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.jpg" alt="Victoria wearing hat and camera" class="profile-image">
+      <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
       <h1 class="tag name">Hello, I’m Victoria.</h1>
-      <p class="tag location">My hometown is Gueydan, Louisiana.</p>
+      <p class="tag location">I'm from Gueydan, Louisiana. I currently live in Baton Rouge.</p>
     </header>
 
     <main class="flex">
