Made all the navbars match
Fixed the contact navbar issue then matched all the pages nav formatting

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
+          <li class="name">Contact</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="interests.html">Interests</a></li>
