--- a/interests.html
+++ b/interests.html
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Victoria</li>
+          <li class="name">Interests</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="interests.html">Interests</a></li>
