Corrected contact page format

--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,16 @@
     </header>
 
     <main class="flex">
-      <h2>Want to get in touch?</h2>
-      <ul>
-        <li>(337)660-5918</li>
-        <li>vic.fuselier@gmail.com</li>
-        <li>LinkedIn</li>
-        <li>Github</li>
-        <li>Twitter</li>
-      </ul>
+      <div class="card">
+        <h2>Want to get in touch?</h2>
+        <ul>
+          <li>(337)660-5918</li>
+          <li>vic.fuselier@gmail.com</li>
+          <li>LinkedIn</li>
+          <li>Github</li>
+          <li>Twitter</li>
+        </ul>
+      </div>
     </main>
     <footer>
       <ul>
