Put example contact info
OOP

--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
       <div class="card">
         <h2>Want to get in touch?</h2>
         <ul>
-          <li>(337)660-5918</li>
-          <li>vic.fuselier@gmail.com</li>
+          <li>(000)000-0000</li>
+          <li>example@gmail.com</li>
           <li>LinkedIn</li>
           <li>Github</li>
           <li>Twitter</li>
