Interests page >> About Me page. Plus some text changes and additions
Changed the name of Interests page to About Me page and adjusted all nav links accordingly. Added and changed text on Home page and About Me page. Added some info on About Me page that should only be displayed on hover. Will format next

--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,15 @@
           <li class="name">Contact</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
-          <li><a href="interests.html">Interests</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
-      <h1 class="tag name">Hello, I’m Victoria.</h1>
-      <p class="tag location">I'm from Gueydan, Louisiana. I currently live in Baton Rouge.</p>
+      <h1 class="tag name">Hello! I’m Victoria</h1>
+      <p class="tag nickname">My friends call me Vic</p>
     </header>
 
     <main class="flex">
