--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
           <li class="name">Welcome to my page!</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
-          <li><a href="interests.html">Interests</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
-      <h1 class="tag name">Hello, I’m Victoria.</h1>
-      <p class="tag location">I'm from Gueydan, Louisiana. I currently live in Baton Rouge.</p>
+      <h1 class="tag name">Hello! I’m Victoria</h1>
+      <p class="tag nickname">My friends call me Vic</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web developer who loves learning cool new coding tricks. I have worked in lots of different jobs, and I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a bartender and a professional fitness coach and am a life-long learner who's always interested in trying new things and expanding my skills.</p>
+        <p>I’m an aspiring web developer who loves learning cool new coding tricks. WebDev topics that are especially interesting to me are responsive web design, visual design for the web, and accessibility.</p>
+        <p>I’ve held titles such as office assistant, bartender, and professional fitness coach. I am a life-long learner who's always trying new things and expanding my skillset. I’m excited to bring my life experience to the process of building fantastic-looking websites.</p>
       </div> 
 
       <div class="card">
@@ -41,7 +41,8 @@
           <li>Bootstrap</li>
           <li>Github</li>
         </ul>
-        <p>I’d like to work for a web development firm as a front-end developer. I'd like to be part of a team that is proud of the beautiful sites they build together.</p>
+        <p>I want to work as a front end developer for a local web design firm or maybe even for one of my favorite apparel, jewelry, or fitness companies.</p>
+        <p>I'd like to be part of a team that is proud of the beautiful sites they build together.</p>
       </div> 
 
     </main>
