--- a/skills.html
+++ b/skills.html
@@ -13,15 +13,15 @@
           <li class="name">Skills</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
-          <li><a href="interests.html">Interests</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/me.jpg" alt="Victoria wearing hat and camera" class="profile-image">
-      <h1 class="tag name">Hello, I’m Victoria.</h1>
-      <p class="tag location">My hometown is Gueydan, Louisiana.</p>
+      <h1 class="tag name">Hello! I’m Victoria</h1>
+      <p class="tag nickname">My friends call me Vic</p>
     </header>
 
     <main class="flex">
@@ -32,6 +32,7 @@
                     <li>Organization</li>
                     <li>Time Management</li>
                     <li>Professionalism</li>
+                    <li>Grammar & Writing</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
