Changed header pics and profile pics on secondary pages,
Put different profile pic and different header pic on each page. Also hid hover info from about me page

--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
         </ul>
     </div>
 
-    <header>
-      <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
+    <header id="contactheader">
+      <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
       <h1 class="tag name">Hello! I’m Victoria</h1>
       <p class="tag nickname">My friends call me Vic</p>
     </header>
