--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <header>
+    <header id="indexheader">
       <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
       <h1 class="tag name">Hello! I’m Victoria</h1>
       <p class="tag nickname">My friends call me Vic</p>
