--- a/skills.html
+++ b/skills.html
@@ -18,8 +18,8 @@
         </ul>
     </div>
 
-    <header>
-      <img src="images/me.jpg" alt="Victoria wearing hat and camera" class="profile-image">
+    <header id="skillsheader">
+      <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
       <h1 class="tag name">Hello! I’m Victoria</h1>
       <p class="tag nickname">My friends call me Vic</p>
     </header>
