--- a/aboutme.html
+++ b/aboutme.html
@@ -18,8 +18,8 @@
         </ul>
     </div>
 
-    <header>
-      <img src="images/me.jpg" alt="Victoria wearing hat and camera" class="profile-image">
+    <header id="aboutmeheader">
+      <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
       <h1 class="tag name">Hello! I’m Victoria</h1>
       <p class="tag nickname">My friends call me Vic</p>
     </header>
@@ -45,7 +45,7 @@
                   <li>Maximum Ride, James Patterson</li>
                 </ul>
                 <li>Music</li>
-                <p>A few of my favorite bands and music artists:</p>
+                <p class="hover-info">A few of my favorite bands and music artists:</p>
                 <ul class="hover-info">
                   <li>The Beatles</li>
                   <li>Red Hot Chili Peppers</li>
@@ -77,6 +77,7 @@
                   <li>The Hunt</li>
                   <li>Liar Liar</li>
                   <li>Elf</li>
+                  <li>Fight Club</li>
                 </ul>
                 <li>Fashion</li>
                 <p class="hover-info">I love talking fashion (as well as clean skincare and beauty topics) and would love to work on websites for one of my favorite brands. Here's a few:</p>
@@ -99,8 +100,8 @@
                 <p class="hover-info">I'm no Robin Hood, but I was gifted a bow and am REALLY enjoying this new hobby of mine. Do you have any hobbies you owe to the generosity of another?</p>
                 <li>Photography</li>
                 <p class="hover-info">As with archery, I'm no pro at this hobby. My mom is the real pro who got me interested in photography. I really enjoy collecting lots of photos of all kinds of things. I think I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant print Polaroid camera and my good ole phone camera, and you'd be surprised what kind of beautiful snaps you can capture with such basic equipment!</p>
-                <li>Learning French and ASL</li>
-                <p class="hover-info">I've taken basic courses in both of these languages, and wow! I really enjoy learning these new languages. I find that each new language I learn with web development reminds me of the feeling I got when first learning French and ASL!</p>
+                <li>Learning Languages</li>
+                <p class="hover-info">I've taken basic courses in both ASL and French, and wow! I really enjoy learning these new languages. I find that each new language I learn with web development reminds me of the feeling I got when first learning French and ASL!</p>
               </ul>
         </div>
     </main>
