--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link rel="icon" type="image/png" href="images/favicon.png">
   <body>
 
     <div class="main-nav">
