Added credits for icon and photos to footer

--- a/skills.html
+++ b/skills.html
@@ -60,6 +60,7 @@
         <li><a href="https://github.com/victoriafuselier" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2023, Victoria Fuselier</p>
+      <p class="credits"><a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">V</a> icon by <a target="_blank" href="https://icons8.com">Icons8; Photos courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></a></p>
     </footer>
   </body>
   </html>
