Changed header text on each page to match topic

--- a/skills.html
+++ b/skills.html
@@ -21,13 +21,13 @@
 
     <header id="skillsheader">
       <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
-      <h1 class="tag name">Hello! I’m Victoria</h1>
-      <p class="tag nickname">My friends call me Vic</p>
+      <h1 class="tag name">These are some of my skills</h1>
+      <p class="tag nickname">Plus a list of some of my favorite web dev resources</p>
     </header>
 
     <main class="flex">
         <div class="card">
-            <h2>Skills</h2>
+          <h2>Skills</h2>
                 <ul>
                     <li>Typing</li>
                     <li>Organization</li>
@@ -42,7 +42,7 @@
                 </ul>
         </div> 
         <div class="card">
-            <h2>Coding Resources I Learned From</h2>
+            <h2>Resources</h2>
                 <ul>
                     <li>Team Treehouse</li>
                     <li>Free Code Camp</li>
