--- a/aboutme.html
+++ b/aboutme.html
@@ -21,8 +21,8 @@
 
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
-      <h1 class="tag name">Hello! I’m Victoria</h1>
-      <p class="tag nickname">My friends call me Vic</p>
+      <h1 class="tag name">About Me</h1>
+      <p class="tag nickname">Hover over each item below to learn a little more about me</p>
     </header>
 
     <main class="flex">
