--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,12 @@
 
     <header id="contactheader">
       <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
-      <h1 class="tag name">Hello! I’m Victoria</h1>
-      <p class="tag nickname">My friends call me Vic</p>
+      <h1 class="tag name">Want to get in touch?</h1>
+      <p class="tag nickname">Here's my contact info!</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Want to get in touch?</h2>
         <ul>
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
