Swapped profile pics and formatted hobbies list

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,15 +21,13 @@
 
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
-      <h1 class="tag name">About Me</h1>
+      <h1 class="tag name">Hobbies & Interests</h1>
       <p class="tag nickname">Hover over each item below to learn a little more about me</p>
     </header>
 
     <main class="flex">
         <div class="card">
-            <h2>Hobbies & Interests</h2>
-            <p>Hover over each to read more!</p>
-            <ul>
+            <ul class="hobbieslist">
                 <li>Weightlifting</li>
                 <p class="hover-info">I was introduced to weightlifting by a girlfriend of mine, and it totally changed my health, and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
                 <li>Yoga</li>
