--- a/contact.html
+++ b/contact.html
@@ -20,14 +20,14 @@
     </div>
 
     <header id="contactheader">
-      <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
+      <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
       <h1 class="tag name">Want to get in touch?</h1>
       <p class="tag nickname">Here's my contact info!</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <ul>
+        <ul id="contactlist">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
           <li>LinkedIn</li>
