--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
     </div>
 
     <header id="skillsheader">
-      <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
+      <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
       <h1 class="tag name">These are some of my skills</h1>
       <p class="tag nickname">Plus a list of some of my favorite web dev resources</p>
     </header>
