Added education. Changed font.
Added education to skills. Changed font of entire site. In header, adjusted name and nickname classes to headline and tagline, to be more semantic. Fixed the hover border issue on the card class BUT still don't like it--may improve more later. Formatting on contact card list still needs work

--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@
 
     <header id="contactheader">
       <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
-      <h1 class="tag name">Want to get in touch?</h1>
-      <p class="tag nickname">Here's my contact info!</p>
+      <h1 class="tag headline">Fancy a Chat?</h1>
+      <p class="tag tagline">Here's my contact info!</p>
     </header>
 
     <main class="flex">
