--- a/skills.html
+++ b/skills.html
@@ -21,11 +21,20 @@
 
     <header id="skillsheader">
       <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
-      <h1 class="tag name">These are some of my skills</h1>
-      <p class="tag nickname">Plus a list of some of my favorite web dev resources</p>
+      <h1 class="tag headline">My Skills</h1>
+      <p class="tag tagline">Plus my education history and a list of some of my favorite web dev resources</p>
     </header>
 
     <main class="flex">
+        <div class="card">
+          <h2>Education</h2>
+                <ul>
+                    <li>Lake Arthur High<br>Valedictorian</li>
+                    <li>Louisiana State University<br>Bachelor's in Kinesiology</li>
+                    <li>Free Code Camp</li>
+                    <li>Team Treehouse<br>Techdegree</li>                    
+                </ul>
+        </div> 
         <div class="card">
           <h2>Skills</h2>
                 <ul>
@@ -40,7 +49,7 @@
                     <li>Bootstrap</li>
                     <li>Github</li>
                 </ul>
-        </div> 
+        </div>
         <div class="card">
             <h2>Resources</h2>
                 <ul>
