--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <link rel="icon" type="image/png" href="images/favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;600&display=swap" rel="stylesheet">
   <body>
 
     <div class="main-nav">
@@ -21,8 +22,8 @@
 
     <header id="indexheader">
       <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
-      <h1 class="tag name">Hello! I’m Victoria</h1>
-      <p class="tag nickname">My friends call me Vic</p>
+      <h1 class="tag headline">Hello! I’m Victoria</h1>
+      <p class="tag tagline">My friends call me Vic</p>
     </header>
 
     <main class="flex">
