Changed div element "main-nav" to nav element. Adjusted contact li format
Improved contact list format but may need more work. Changed div elements from divs to navs and sections as required in syllabus. Changed font and included options for heavier font-weight in case grader asks for it heavier.. Discrepancies between home and secondary pages fonts must be addressed

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,11 +5,11 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">About Me</li>
           <li><a href="index.html">Home</a></li>
@@ -17,7 +17,7 @@
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
@@ -26,7 +26,7 @@
     </header>
 
     <main class="flex">
-        <div class="card">
+        <section class="card">
             <ul class="hobbieslist">
                 <li>Weightlifting</li>
                 <p class="hover-info">I was introduced to weightlifting by a girlfriend of mine, and it totally changed my health, and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
@@ -102,7 +102,7 @@
                 <li>Learning Languages</li>
                 <p class="hover-info">I've taken basic courses in both ASL and French, and wow! I really enjoy learning these new languages. I find that each new language I learn with web development reminds me of the feeling I got when first learning French and ASL!</p>
               </ul>
-        </div>
+        </section>
     </main>
     <footer>
       <ul>
