--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <link rel="icon" type="image/png" href="images/favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;600&display=swap" rel="stylesheet">
-  <body>
-
-    <div class="main-nav">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Welcome to my page!</li>
           <li><a href="index.html">Home</a></li>
@@ -18,7 +15,7 @@
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header id="indexheader">
       <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
@@ -27,13 +24,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web developer who loves learning cool new coding tricks. WebDev topics that are especially interesting to me are responsive web design, visual design for the web, and accessibility.</p>
         <p>I’ve held titles such as office assistant, bartender, and professional fitness coach. I am a life-long learner who's always trying new things and expanding my skillset. I’m excited to bring my life experience to the process of building fantastic-looking websites.</p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -45,7 +42,7 @@
         </ul>
         <p>I want to work as a front end developer for a local web design firm or maybe even for one of my favorite apparel, jewelry, or fitness companies.</p>
         <p>I'd like to be part of a team that is proud of the beautiful sites they build together.</p>
-      </div> 
+      </section> 
 
     </main>
     <footer>
