--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Contact</li>
           <li><a href="index.html">Home</a></li>
@@ -17,7 +17,7 @@
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header id="contactheader">
       <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
@@ -26,7 +26,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <ul id="contactlist">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
@@ -34,7 +34,7 @@
           <li>Github</li>
           <li>Twitter</li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer>
       <ul>
