--- a/skills.html
+++ b/skills.html
@@ -5,11 +5,11 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Skills</li>
           <li><a href="index.html">Home</a></li>
@@ -17,7 +17,7 @@
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header id="skillsheader">
       <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
@@ -26,7 +26,7 @@
     </header>
 
     <main class="flex">
-        <div class="card">
+        <section class="card">
           <h2>Education</h2>
                 <ul>
                     <li>Lake Arthur High<br>Valedictorian</li>
@@ -34,8 +34,8 @@
                     <li>Free Code Camp</li>
                     <li>Team Treehouse<br>Techdegree</li>                    
                 </ul>
-        </div> 
-        <div class="card">
+        </section> 
+        <section class="card">
           <h2>Skills</h2>
                 <ul>
                     <li>Typing</li>
@@ -49,8 +49,8 @@
                     <li>Bootstrap</li>
                     <li>Github</li>
                 </ul>
-        </div>
-        <div class="card">
+        </section>
+        <section class="card">
             <h2>Resources</h2>
                 <ul>
                     <li>Team Treehouse</li>
@@ -60,7 +60,7 @@
                     <li>Codepip</li>
                     <li>Youtube</li>
                 </ul>
-        </div> 
+        </section> 
     </main>
     <footer>
       <ul>
