--- a/aboutme.html
+++ b/aboutme.html
@@ -22,19 +22,21 @@
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
       <h1 class="tag headline">Hobbies & Interests</h1>
-      <p class="tag tagline">Hover over each item below to learn a little more about me</p>
+      <p class="tag tagline">Click the 'more' button below each hobby listed below to learn a little more about me!</p>
     </header>
 
     <main class="flex">
         <section class="card">
             <ul class="hobbieslist">
-                <li>Weightlifting</li>
-                <p class="hover-info">I was introduced to weightlifting by a girlfriend of mine, and it totally changed my health, and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
-                <li>Yoga</li>
-                <p class="hover-info">I discovered yoga shortly after I began lifting weights, and it was a total lifesaver! I enjoy practicing yoga both in group classes and at my home!</p>
-                <li>Reading</li>
-                <p class="hover-info">A few of my favorite books:</p>
-                <ul class="hover-info">
+                <li id="hobby1">Weightlifting</li>
+                <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a girlfriend of mine, and it totally changed my health, and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
+                <button id="more-button1">More</button>
+                <li id="hobby2">Yoga</li>
+                <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights, and it was a total lifesaver! I enjoy practicing yoga both in group classes and at my home!</p>
+                <button id="more-button2">More</button>
+                <li id="hobby3">Reading</li>
+                <p id="hobby3info" class="hidden-info"><p class="hidden-info">A few of my favorite books:</p>
+                <ul class="hidden-info">
                   <li>1984, George Orwell</li>
                   <li>The Host, Stephanie Meyer</li>
                   <li>The Hunger Games, Suzanne Collins</li>
@@ -42,10 +44,11 @@
                   <li>The Catcher in the Rye, J.D. Salinger</li>
                   <li>Verity, Colleen Hoover</li>
                   <li>Maximum Ride, James Patterson</li>
-                </ul>
+                </ul></p>
+                <button id="more-button3">More</button>
                 <li>Music</li>
-                <p class="hover-info">A few of my favorite bands and music artists:</p>
-                <ul class="hover-info">
+                <p class="hidden-info">A few of my favorite bands and music artists:</p>
+                <ul class="hidden-info">
                   <li>The Beatles</li>
                   <li>Red Hot Chili Peppers</li>
                   <li>Led Zeppelin</li>
@@ -62,8 +65,8 @@
                   <li>Bush</li>
                 </ul>
                 <li>Movies & Television</li>
-                <p class="hover-info">A few of my favorite movies and TV shows:</p>
-                <ul class="hover-info">
+                <p class="hidden-info">A few of my favorite movies and TV shows:</p>
+                <ul class="hidden-info">
                   <li>Breaking Bad</li>
                   <li>Friends</li>
                   <li>Cop Car</li>
@@ -79,8 +82,8 @@
                   <li>Fight Club</li>
                 </ul>
                 <li>Fashion</li>
-                <p class="hover-info">I love talking fashion (as well as clean skincare and beauty topics) and would love to work on websites for one of my favorite brands. Here's a few:</p>
-                <ul class="hover-info">
+                <p class="hidden-info">I love talking fashion (as well as clean skincare and beauty topics) and would love to work on websites for one of my favorite brands. Here's a few:</p>
+                <ul class="hidden-info">
                   <li>Express</li>
                   <li>Nevaeh</li>
                   <li>Nike</li>
@@ -92,15 +95,15 @@
                   <li>Inkey List</li>
                 </ul>
                 <li>Travel</li>
-                <p class="hover-info">I've been to 2 countries and 13 states--not including where I live! How many have you been to?</p>
+                <p class="hidden-info">I've been to 2 countries and 13 states--not including where I live! How many have you been to?</p>
                 <li>Fishing & Crabbing</li>
-                <p class="hover-info">Some call my hometown of Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat! Do you have any outdoor hobbies?</p>
+                <p class="hidden-info">Some call my hometown of Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat! Do you have any outdoor hobbies?</p>
                 <li>Archery</li>
-                <p class="hover-info">I'm no Robin Hood, but I was gifted a bow and am REALLY enjoying this new hobby of mine. Do you have any hobbies you owe to the generosity of another?</p>
+                <p class="hidden-info">I'm no Robin Hood, but I was gifted a bow and am REALLY enjoying this new hobby of mine. Do you have any hobbies you owe to the generosity of another?</p>
                 <li>Photography</li>
-                <p class="hover-info">As with archery, I'm no pro at this hobby. My mom is the real pro who got me interested in photography. I really enjoy collecting lots of photos of all kinds of things. I think I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant print Polaroid camera and my good ole phone camera, and you'd be surprised what kind of beautiful snaps you can capture with such basic equipment!</p>
+                <p class="hidden-info">As with archery, I'm no pro at this hobby. My mom is the real pro who got me interested in photography. I really enjoy collecting lots of photos of all kinds of things. I think I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant print Polaroid camera and my good ole phone camera, and you'd be surprised what kind of beautiful snaps you can capture with such basic equipment!</p>
                 <li>Learning Languages</li>
-                <p class="hover-info">I've taken basic courses in both ASL and French, and wow! I really enjoy learning these new languages. I find that each new language I learn with web development reminds me of the feeling I got when first learning French and ASL!</p>
+                <p class="hidden-info">I've taken basic courses in both ASL and French, and wow! I really enjoy learning these new languages. I find that each new language I learn with web development reminds me of the feeling I got when first learning French and ASL!</p>
               </ul>
         </section>
     </main>
@@ -113,5 +116,6 @@
       <p class="copyright">Copyright 2023, Victoria Fuselier</p>
       <p class="credits"><a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">V</a> icon by <a target="_blank" href="https://icons8.com">Icons8; Photos courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></a></p>
     </footer>
+  <script src="script.js"></script>
   </body>
   </html>
