--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
       <h1 class="tag headline">Hobbies & Interests</h1>
-      <p class="tag tagline">Click the 'more' button below each hobby listed below to learn a little more about me!</p>
+      <p class="tag tagline">Click the 'more' button below each hobby to learn a little more about me!</p>
     </header>
 
     <main class="flex">
