Defined 'more' button #2 in js file
Have not found solution for 'less' buttons... Do not like the look and feel of displaying hidden info on separate pages via links (instead of using js to toggle between hidden and visible)

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@
                 <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend, and it totally changed my health... and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
                 <button id="more-button1">More</button>
                 <li id="hobby2">Yoga</li>
-                <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights, and it was a total gamechanger! I enjoy practicing yoga both in group classes and at my home!</p>
+                <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights, and it was a total gamechanger. I enjoy practicing yoga both in group classes and at my home.</p>
                 <button id="more-button2">More</button>
                 <li id="hobby3">Reading</li>
                 <p id="hobby3info" class="hidden-info">A few of my favorite books:</p>
