--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web developer who loves learning cool new coding tricks. WebDev topics that are especially interesting to me are responsive web design, visual design for the web, and accessibility.</p>
-        <p>I’ve held titles such as office assistant, bartender, and professional fitness coach. I am a life-long learner who's always trying new things and expanding my skillset. I’m excited to bring my life experience to the process of building fantastic-looking websites.</p>
+        <p>I’ve held titles such as office assistant, bartender, and professional fitness coach. I am a life-long learner who's always trying new things and expanding my skillset. I’m excited to bring my life experience to the process of building functional and aesthethic websites.</p>
       </section> 
 
       <section class="card">
@@ -41,7 +41,7 @@
           <li>Github</li>
         </ul>
         <p>I want to work as a front end developer for a local web design firm or maybe even for one of my favorite apparel, jewelry, or fitness companies.</p>
-        <p>I'd like to be part of a team that is proud of the beautiful sites they build together.</p>
+        <p>I'd like to be part of a team that is proud of the beautiful, dependable sites they build together.</p>
       </section> 
 
     </main>
