--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,9 @@
         <ul id="contactlist">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
-          <li>LinkedIn</li>
-          <li>Github</li>
-          <li>Twitter</li>
+          <li><a href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/victoriafuselier">Github</a></li>
         </ul>
       </section>
     </main>
