Used HTML & CSS validators to find & correct errors
Fixed all footer credit links. Fixed double body tags on all pages. Entire makeover of contact page. Minor text changes on multiple pages.

About me page is still a wreck and would like to seek help with JS validator and Slack forum

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,9 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/favicon.png">
   <body>
-
     <nav class="main-nav">
         <ul class="nav">
           <li class="name">Contact</li>
@@ -22,11 +21,12 @@
     <header id="contactheader">
       <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
       <h1 class="tag headline">Fancy a Chat?</h1>
-      <p class="tag tagline">Here's my contact info!</p>
+      <p class="tag tagline">Me too!</p>
     </header>
 
     <main class="flex">
-      <section class="card">
+      <section class="card" id="contactcard">
+        <h2>Contact Info:</h2>
         <ul id="contactlist">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
@@ -34,6 +34,9 @@
           <li><a href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a></li>
           <li><a href="https://github.com/victoriafuselier">Github</a></li>
         </ul>
+        <p>The best time frame to reach me is between 7:00 a.m. and 7:00 p.m. (However, I love getting calls, emails, or messages any time)</p>
+        <p>Please feel welcome to leave a message if I do not answer immediately, and I'll get back to you ASAP.</p>
+        <p>I look forward to hearing from you!</p>
       </section>
     </main>
     <footer>
@@ -43,7 +46,7 @@
         <li><a href="https://github.com/victoriafuselier" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2023, Victoria Fuselier</p>
-      <p class="credits"><a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">V</a> icon by <a target="_blank" href="https://icons8.com">Icons8; Photos courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></a></p>
+      <p class="credits">V icon by <a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">Icons8</a>; Background images courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></p>
     </footer>
   </body>
   </html>
