--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/favicon.png">
   <body>
 
@@ -69,7 +69,7 @@
         <li><a href="https://github.com/victoriafuselier" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2023, Victoria Fuselier</p>
-      <p class="credits"><a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">V</a> icon by <a target="_blank" href="https://icons8.com">Icons8; Photos courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></a></p>
+      <p class="credits">V icon by <a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">Icons8</a>; Background images courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></p>
     </footer>
   </body>
   </html>
