--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   <title>Victoria Fuselier's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/favicon.png">
   <body>
 
@@ -21,12 +21,13 @@
 
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
-      <h1 class="tag headline">Hobbies & Interests</h1>
-      <p class="tag tagline">Click the 'more' button below each hobby to learn a little more about me!</p>
+      <h1 class="tag headline">About Me</h1>
+      <p class="tag tagline">Click the 'more' button below each item to learn a little more about me!</p>
     </header>
 
     <main class="flex">
         <section class="card">
+          <h2>Hobbies & Interests</h2>
             <ul class="hobbieslist">
                 <li id="hobby1">Weightlifting</li>
                 <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend, and it totally changed my health... and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
@@ -113,8 +114,8 @@
         <li><a href="https://github.com/victoriafuselier" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2023, Victoria Fuselier</p>
-      <p class="credits"><a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">V</a> icon by <a target="_blank" href="https://icons8.com">Icons8; Photos courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></a></p>
+      <p class="credits">V icon by <a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">Icons8</a>; Background images courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></p>
     </footer>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
   </html>
