Styled the list items and 'more' buttons a little nicer
Changed color to compliment image better; changed spacing and font size

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
     <header id="aboutmeheader">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
       <h1 class="tag headline">About Me</h1>
-      <p class="tag tagline">Click the 'more' button below each item to learn a little more about me!</p>
+      <p class="tag tagline">Click the button below each item to learn a little extra about me!</p>
     </header>
 
     <main class="flex">
@@ -31,10 +31,10 @@
             <ul class="hobbieslist">
                 <li id="hobby1">Weightlifting</li>
                 <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend, and it totally changed my health... and my life! This transformation inspired me to major in Kinesiology for my undergraduate degree and to be a personal trainer!</p>
-                <button id="more-button1">More</button>
+                <button id="more-button1">Read More</button>
                 <li id="hobby2">Yoga</li>
                 <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights, and it was a total gamechanger. I enjoy practicing yoga both in group classes and at my home.</p>
-                <button id="more-button2">More</button>
+                <button id="more-button2"> Read More</button>
                 <li id="hobby3">Reading</li>
                 <p id="hobby3info" class="hidden-info">A few of my favorite books:</p>
                 <ul class="hidden-info">
