Changed contact page txt; format > mobile-friendly

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <header id="contactheader">
       <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
       <h1 class="tag headline">Fancy a Chat?</h1>
-      <p class="tag tagline">Me too!</p>
+      <p class="tag tagline">So would I!</p>
     </header>
 
     <main class="flex">
@@ -30,13 +30,10 @@
         <ul id="contactlist">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
-          <li><a href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://github.com/victoriafuselier">Github</a></li>
+          <li>Follow me on <a href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
+          <li>View my <a href="https://www.linkedin.com/in/victoriafuselier/" target="_blank">LinkedIn</a> resume</li>
+          <li>Check out my <a href="https://github.com/victoriafuselier">Github</a> account</li>
         </ul>
-        <p>The best time frame to reach me is between 7:00 a.m. and 7:00 p.m. (However, I love getting calls, emails, or messages any time)</p>
-        <p>Please feel welcome to leave a message if I do not answer immediately, and I'll get back to you ASAP.</p>
-        <p>I look forward to hearing from you!</p>
       </section>
     </main>
     <footer>
